# Transport-Network-and-Baxter

./: README.md  README.md~
Baxter/: README.md  README.md~
Baxter/Biblio/: Doc baxter.txt  ROS baxter.txt  SSH.txt  SSH.txt~
Baxter/Commandes/: main_commande_1ere_MEF.cpp
Baxter/Documentation/Biblio/: ROS baxter.txt
Baxter/Documentation/Biblio/Commande trouvée sur internet/: baxter_joint_cmd.cpp
Baxter/Documentation/Commandes/Interaction Ligne transitique avec Baxter/: main_commande baxter 1 bras.cpp~  main_commande baxter 2 bras alternés.cpp~
Baxter/Documentation/Documents utiles/: .~lock.Rapport.odt#  .~lock.Topics et messages baxter.odt#  ROS_network.odt  Rapport de stage.aux  Rapport de stage.dvi  Rapport de stage.odt  Rapport de stage.out  Rapport de stage.tex  Rapport de stage.toc  Rapport.odt  Topics et messages baxter.odt  adresses baxter.txt
Baxter/Documentation/Documents utiles/Images/: .~lock.Schémas.odp#  (+1 more)
Baxter/ros_ws/: baxter.sh  baxter.sh~
Baxter/ros_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
Baxter/ros_ws/install/: .rosinstall  _setup_util.py  setup.sh
Baxter/ros_ws/src/: .rosinstall  .rosinstall.bak
Baxter/ros_ws/src/tests_baxter/: CMakeLists.txt
Baxter/ros_ws/src/tests_baxter/src/: baxter.cpp  baxter.cpp~  baxter.h  baxter.h~  baxter_left_arm.cpp  baxter_left_arm.cpp~  baxter_left_arm.h~  baxter_right_arm.cpp~  baxter_right_arm.h~  commande.cpp~  listener.cpp~
Ligne_tansitique_MONTRAC/: README.md  README.md~  commande_simulation  simulation
Ligne_tansitique_MONTRAC/Commandes/: main_commande LT 4aiguillages 4 navettes.cpp  main_commande baxter1bras.cpp
Ligne_tansitique_MONTRAC/V-Rep/models/: v_repModelThumbnails.ttmt
Ligne_tansitique_MONTRAC/V-Rep/system/: usrset.txt
Ligne_tansitique_MONTRAC/ros_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
Ligne_tansitique_MONTRAC/ros_ws/src/commande/: CMakeLists.txt  CMakeLists.txt~
Ligne_tansitique_MONTRAC/ros_ws/src/commande/src/: capteurs.cpp  commande.cpp  commande.cpp~  communication_baxter.cpp  communication_baxter.cpp~  communication_baxter.h  communication_baxter.h~  main_commande.cpp  main_commande.cpp~
Ligne_tansitique_MONTRAC/ros_ws/src/commande_simulation/: CMakeLists.txt  CMakeLists.txt~
Ligne_tansitique_MONTRAC/ros_ws/src/commande_simulation/src/: main_commande_simulation.cpp  stopState.cpp
Ligne_transitique_MONTRAC/: README.md  README.md~  Simulation.ttt
Ligne_transitique_MONTRAC/Documentation/: Projet IARF et RODECO 2018-2019
Ligne_transitique_MONTRAC/ros_ws/devel/: .catkin  .rosinstall  setup.sh
(+958 files in other folders)
